// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field clearable prop 1`] = `
<div class="o-field o-field--normal o-field--border o-field--input">
  <div class="o-field__body"><input type="text" placeholder="请输入内容" class="o-field__input o-field__item"></div>
</div>
`;

exports[`Field clearable prop 2`] = `
<div class="o-field o-field--normal o-field--border o-field--input">
  <div class="o-field__body"><input type="text" placeholder="请输入内容" class="o-field__input o-field__item"></div>
</div>
`;

exports[`Field render label slot 1`] = `
<div class="o-field o-field--normal o-field--border o-field--input">
  <div class="o-field__body">
    <div class="o-field__label o-field__item">Custom Label</div><input type="text" placeholder="请输入内容" class="o-field__input o-field__item">
  </div>
</div>
`;

exports[`Field render textarea 1`] = `
<div class="o-field o-field--normal o-field--border o-field--textarea">
  <div class="o-field__body"><textarea placeholder="请输入内容" class="o-field__input"></textarea></div>
</div>
`;
